--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,5 +3,7 @@ services:
   frontend:
     build:
       context: .
+    container_name: chatbot_frontend
+    command: npm run serve
     ports:
       - 5173:5173
